packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_move_bind_value_to_var_props.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5356
expression: output
---
==INPUT==


import { $, component$, useSignal } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";

export const FieldInput = component$(
  (props) => {
    const initialValues = { value: undefined as string | undefined };
    const rest = destructureBindings(props, initialValues);

    return (
      <input
        {...rest}
        bind:value={finalValue}
		onClick$={() => {
			console.log('clicked');
		}}
      />
    );
  }
);

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_FieldInput_component_V4XAtJSTRKg = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_V4XAtJSTRKg"), "FieldInput_component_V4XAtJSTRKg");
//
export const FieldInput = /*#__PURE__*/ componentQrl(_qrl_FieldInput_component_V4XAtJSTRKg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAIA,OAAO,MAAM,2BAAa,oDAexB\"}")
============================= test.tsx_FieldInput_component_V4XAtJSTRKg.js (ENTRY POINT)==

import { _getConstProps } from "@qwik.dev/core";
import { _getVarProps } from "@qwik.dev/core";
import { _jsxSplit } from "@qwik.dev/core";
import { destructureBindings } from "./destructure-bindings";
import { qrl } from "@qwik.dev/core";
//
const _qrl_FieldInput_component_input_q_e_click_fZgZHYZXt60 = /*#__PURE__*/ qrl(()=>import("./test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60"), "FieldInput_component_input_q_e_click_fZgZHYZXt60");
//
export const FieldInput_component_V4XAtJSTRKg = (props)=>{
    const initialValues = {
        value: undefined
    };
    const rest = destructureBindings(props, initialValues);
    return /*#__PURE__*/ _jsxSplit("input", {
        ..._getVarProps(rest),
        ..._getConstProps(rest),
        "bind:value": finalValue
    }, {
        "q-e:click": _qrl_FieldInput_component_input_q_e_click_fZgZHYZXt60
    }, null, 0, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;gDAKE,CAAC;IACC,MAAM,gBAAgB;QAAE,OAAO;IAAgC;IAC/D,MAAM,OAAO,oBAAoB,OAAO;IAExC,qBACE,UAAC;wBACK;0BAAA;QADN,cAEc;;QAClB,WAAQ;;AAKR\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_V4XAtJSTRKg",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "V4XAtJSTRKg",
  "canonicalFilename": "test.tsx_FieldInput_component_V4XAtJSTRKg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    164,
    455
  ],
  "paramNames": [
    "props"
  ]
}
*/
============================= test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60.js (ENTRY POINT)==

export const FieldInput_component_input_q_e_click_fZgZHYZXt60 = ()=>{
    console.log('clicked');
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"gEAaY;IACT,QAAQ,GAAG,CAAC;AACb\"}")
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_input_q_e_click_fZgZHYZXt60",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component_input_q_e_click",
  "hash": "fZgZHYZXt60",
  "canonicalFilename": "test.tsx_FieldInput_component_input_q_e_click_fZgZHYZXt60",
  "path": "",
  "extension": "js",
  "parent": "FieldInput_component_V4XAtJSTRKg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    396,
    434
  ]
}
*/
== DIAGNOSTICS ==

[]
