packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__should_not_move_component_to_module_scope.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 5388
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export const Foo = component$(()  => { 
  const bar = useSignal(13); 
  const Cmp = component$(() => {
    console.log(bar);
    return <></>;
  });
return <div>a</div>
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;AAGA,OAAO,MAAM,oBAAM,4EAOjB\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
const i_r8FyTKoF0lM = ()=>import("./test.tsx_Foo_component_Cmp_component_r8FyTKoF0lM");
export const Foo_component_HTDRsvUbLiE = ()=>{
    const bar = useSignal(13);
    /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_r8FyTKoF0lM, "Foo_component_Cmp_component_r8FyTKoF0lM", [
        bar
    ]));
    return /*#__PURE__*/ _jsxSorted("div", null, null, "a", 3, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;yCAG8B;IAC5B,MAAM,MAAM,UAAU;kBACV;;;IAId,qBAAO,WAAC,mBAAI;AACZ\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    229
  ]
}
*/
============================= test.tsx_Foo_component_Cmp_component_r8FyTKoF0lM.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
export const Foo_component_Cmp_component_r8FyTKoF0lM = ()=>{
    const bar = _captures[0];
    console.log(bar);
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, null, 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;uDAKyB;;IACrB,QAAQ,GAAG,CAAC;IACZ,qBAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Cmp_component_r8FyTKoF0lM",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Cmp_component",
  "hash": "r8FyTKoF0lM",
  "canonicalFilename": "test.tsx_Foo_component_Cmp_component_r8FyTKoF0lM",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    154,
    205
  ],
  "captureNames": [
    "bar"
  ]
}
*/
== DIAGNOSTICS ==

[]
